--- a/assign/studentQueries.ipynb
+++ b/assign/studentQueries.ipynb
@@ -12,6 +12,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "768d9926-eb87-4fcb-9b08-f458621f2ae7",
+   "metadata": {},
+   "source": [
+    "# Final Activities\n",
+    "- Quiz - 06 Dec 25\n",
+    "- Final Class - 07 Dec 25\n",
+    "- Group of 2 students (mutually done) - List to be finalised\n",
+    "- Recording of Videos in which one Student becomes Interviewer and other becomes Candidate.\n",
+    "    - Interview will ask for self introduction and any other interview questions\n",
+    "    - In 2nd part of video, Interviewer will ask for standard question as provided\n",
+    "- Self Introduction\n",
+    "    - https://docs.google.com/document/d/1-PzB7in9f0HSCStCpwJqhN1aG2m6IBYxYbk_erm1BMI/edit?tab=t.0 \n",
+    "- Interview Questions\n",
+    "    - https://github.com/dupadhyaya/piit/blob/main/intQs/data_analyst_interview_questions.pdf\n",
+    "- Both the videos will be uploaded into their respective google accounts and shared with PIIT team\n",
+    "- After Evaluation of Quiz, Videos further support of placement to be provided. Personal counselling to be done if required\n",
+    "- This can happen once all videos have been uploaded and links provided to the PIIT team"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a638dcb4-f741-43cd-b8f3-3a545da3def2",
    "metadata": {},
    "source": [
@@ -27,9 +48,13 @@
     "- Creating report to the Manager ----- Jugurtha\n",
     "    - piit/misc/reportWriting.ipynb\n",
     "## Quiz Test\n",
-    "- ....\n",
+    "- https://docs.google.com/forms/d/e/1FAIpQLSflRf3hmqGMZVeSfgH6W6pfw2KFGyde1i0SXcJXZgpvdNgDfA/viewform\n",
     "## Interview Questions\n",
-    "- ..."
+    "- General : https://github.com/dupadhyaya/piit/blob/main/intQs/intQgen.ipynb\n",
+    "- Python : https://github.com/dupadhyaya/piit/blob/main/intQs/intQpy.ipynb\n",
+    "- SQL : https://github.com/dupadhyaya/piit/blob/main/intQs/intQsql.ipynb\n",
+    "- XLS : https://github.com/dupadhyaya/piit/blob/main/intQs/intQxlgs.ipynb\n",
+    "- Tableau : later"
    ]
   },
   {
