--- a/intQs/intQgen.ipynb
+++ b/intQs/intQgen.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "afb94416-aaf0-45b8-9fe9-2bcea01dc837",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Interview Questions - Analytics (General)"
    ]
@@ -247,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
