--- a/intQs/intQsql.ipynb
+++ b/intQs/intQsql.ipynb
@@ -10,52 +10,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6f21d77-340f-4c22-809e-22941dd0cb9b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "233a68cf-f0a5-43ee-91a5-cdfac4a67f44",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "625a8552-cd47-4f08-9a29-1fdc38747628",
    "metadata": {},
    "source": [
-    "1.\tWhat’s the difference between WHERE and HAVING clauses?\n",
-    "\t2.\tHow do you select all columns from a table?\n",
-    "\t3.\tWrite a query to select only unique values from a column.\n",
-    "\t4.\tHow do you sort query results in descending order?\n",
-    "\t5.\tWrite a query to find the top 5 highest sales.\n",
-    "\t6.\tWhat’s the difference between INNER JOIN and LEFT JOIN?\n",
-    "\t7.\tHow do you filter rows where a column value is NULL?\n",
-    "\t8.\tWrite a query to count the number of rows in a table.\n",
-    "\t9.\tHow do you group data by a column and get an average?\n",
-    "\t10.\tHow do you rename a column in the SELECT output?\n",
-    "\t11.\tWrite a query to get records where a text column contains “India”.\n",
-    "\t12.\tHow do you use BETWEEN to filter a date range?\n",
-    "\t13.\tWhat’s the difference between UNION and UNION ALL?\n",
-    "\t14.\tWrite a query to find duplicate values in a table.\n",
-    "\t15.\tHow do you limit results to the first 10 rows?\n",
-    "\t16.\tWrite a query to calculate the percentage of total sales for each category.\n",
-    "\t17.\tHow do you join more than two tables?\n",
-    "\t18.\tHow do you create an alias for a table?\n",
-    "\t19.\tWhat’s the difference between a primary key and a foreign key?\n",
-    "\t20.\tHow do you update a specific record in a table?"
+    "- What’s the difference between WHERE and HAVING clauses?\n",
+    "- How do you select all columns from a table?\n",
+    "- Write a query to select only unique values from a column.\n",
+    "- How do you sort query results in descending order?\n",
+    "- Write a query to find the top 5 highest sales.\n",
+    "- What’s the difference between INNER JOIN and LEFT JOIN?\n",
+    "- How do you filter rows where a column value is NULL?\n",
+    "- Write a query to count the number of rows in a table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78fd17ac-7747-4cbb-9638-c2a8a5237d96",
+   "metadata": {},
+   "source": [
+    "- How do you group data by a column and get an average?\n",
+    "- How do you rename a column in the SELECT output?\n",
+    "- Write a query to get records where a text column contains “India”.\n",
+    "- How do you use BETWEEN to filter a date range?\n",
+    "- What’s the difference between UNION and UNION ALL?\n",
+    "- Write a query to find duplicate values in a table.\n",
+    "- How do you limit results to the first 10 rows?\n",
+    "- Write a query to calculate the percentage of total sales for each category.\n",
+    "- How do you join more than two tables?\n",
+    "- How do you create an alias for a table?\n",
+    "- What’s the difference between a primary key and a foreign key?\n",
+    "- How do you update a specific record in a table?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a827ce8-eb73-40ee-a9b1-265a7e188b25",
+   "id": "59259ae4-e753-43a2-a28f-85ee5b458bdc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
