--- a/assign/studentQueries.ipynb
+++ b/assign/studentQueries.ipynb
@@ -54,7 +54,7 @@
     "- Python : https://github.com/dupadhyaya/piit/blob/main/intQs/intQpy.ipynb\n",
     "- SQL : https://github.com/dupadhyaya/piit/blob/main/intQs/intQsql.ipynb\n",
     "- XLS : https://github.com/dupadhyaya/piit/blob/main/intQs/intQxlgs.ipynb\n",
-    "- Tableau : later"
+    "- Tableau : https://github.com/dupadhyaya/piit/blob/main/intQs/intQstableau.ipynb"
    ]
   },
   {
