--- a/py/others/functions.ipynb
+++ b/py/others/functions.ipynb
@@ -55,6 +55,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "f36888a2-0404-4664-a3c7-52e815fe8f04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello,  Suroor  welcome to Python functions!\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet('Suroor')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "9416ba46-8d9b-41f0-9a34-f431d6483903",
    "metadata": {},
    "outputs": [
@@ -78,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f1e8693f-b48a-4100-8a61-251922445a91",
    "metadata": {},
    "outputs": [
@@ -104,6 +122,83 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "37789ac1-e54c-431b-a2bd-061880ed12c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_numbers(10,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d83dd207-019d-4ab7-bc1a-efba56145f62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=add_numbers(4,6)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "44bdf243-c112-450c-b35b-5251564f1b80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_numbers2(x, y):\n",
+    "    z = x + y\n",
+    "    return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7adadb28-924f-48b9-96e3-67e7259201d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z1 = add_numbers2(1,2)\n",
+    "z1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "b8f50298-8a8d-4255-98c5-9a04773898c1",
    "metadata": {},
    "outputs": [
@@ -127,6 +222,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a64d6135-345b-4c77-8b6f-5e64dd024aa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, PIIT Student!\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet_user()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f4554611-ef64-47b3-8d45-e2e017488555",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Sultana!\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet_user('Sultana')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6b4876a7-6850-4621-bb0c-82bb97923bfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet_user2(name=\"PIIT Student\" , rollno=1):\n",
+    "    message = f\"Hello, {name} enrolment no {rollno}!\"\n",
+    "    return message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7815f38a-40b3-45ec-a6c8-6178a8817da5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, PIIT Student enrolment no 1!'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x= greet_user2()\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "8c7fea48-5c8a-47c3-b2af-dc3e978bab83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, Suroor enrolment no 100!'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greet_user2('Suroor', 100)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cc022dc1-1ddb-4e3c-b494-cec0e2d4433c",
    "metadata": {},
@@ -140,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "664aeba1-2956-48b6-b44b-d0209b631045",
    "metadata": {},
    "outputs": [],
@@ -151,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "d8375c87-cafc-4090-82a5-09f23540a8a0",
    "metadata": {},
    "outputs": [
@@ -161,7 +347,7 @@
        "(32, 11)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "47eb3891-d07d-4cd6-9085-bae63ce22231",
    "metadata": {},
    "outputs": [],
@@ -182,7 +368,7 @@
     "def min_max_mpg():\n",
     "    \"\"\"Return the minimum and maximum MPG from the mtcars dataset.\"\"\"\n",
     "    # Load the mtcars dataset\n",
-    "    df = data('mtcars')\n",
+    "    #df = data('mtcars')\n",
     "    \n",
     "    # Find min and max\n",
     "    min_val = df['mpg'].min()\n",
@@ -193,40 +379,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "eb07cb07-8f95-414d-9e18-18a42e3fd9a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.min_max_mpg()>"
+       "(10.4, 33.9)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "min_max_mpg"
+    "min_max_mpg()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "403fca9d-f045-4f1c-a0d0-8cfe2b879c73",
+   "execution_count": 45,
+   "id": "6d9c4f82-2a92-4d11-9165-d4bfdad9650a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minimum MPG: 10.4\n",
-      "Maximum MPG: 33.9\n"
+      "Min is  10.4  Max is  33.9\n"
      ]
     }
    ],
+   "source": [
+    "x , y = min_max_mpg()\n",
+    "print('Min is ', x, ' Max is ', y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "403fca9d-f045-4f1c-a0d0-8cfe2b879c73",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "min_mpg, max_mpg = min_max_mpg()\n",
     "print(f\"Minimum MPG: {min_mpg}\")\n",
@@ -235,18 +431,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "80b4b0b1-6647-4f53-9703-16435aea01a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33.9 10.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df.mpg.max(), df.mpg.min())"
    ]
