--- a/py/others/loops.ipynb
+++ b/py/others/loops.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Loops in Python\n",
     "- for loop\n",
-    "    -  Python’s for loops are often used for iterating over datasets, automating repetitive tasks, and applying transformations or calculations. While libraries like pandas and numpy offer vectorized methods (which are usually faster), understanding and using for loops is still essential for flexibility and custom operations."
+    "    -  Python’s for loops are often used for iterating over datasets, automating repetitive tasks, and applying transformations or calculations. While libraries like pandas and numpy offer vectorized methods (which are usually faster), understanding and using for loops is still essential for flexibility and custom operations.\n",
+    "-  for loop is used to iterate over a sequence (such as a list, tuple, string, or range) or other iterable objects. It executes a block of code repeatedly, once for each item in the sequence. "
    ]
   },
   {
@@ -20,8 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "a6947442-d4fa-4531-adbe-ff9c270b9f7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'banana', 'cherry']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "93d79b81-7517-4b4f-b8f9-40b501bcc198",
    "metadata": {},
    "outputs": [
     {
@@ -30,21 +53,157 @@
      "text": [
       "apple\n",
       "banana\n",
-      "cherry\n",
-      "apple \tbanana \tcherry \t"
+      "cherry\n"
      ]
     }
    ],
    "source": [
-    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
     "for fruit in fruits:\n",
-    "    print(fruit)  #indent\n",
-    "for fruit in fruits: print(fruit, end=' \\t')"
+    "    print(fruit)  #indent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
+   "id": "6c7e0bff-fd57-4f74-9803-b47cae39c904",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple \t\tbanana \t\tcherry \t\t"
+     ]
+    }
+   ],
+   "source": [
+    "for fruit in fruits: print(fruit, end=' \\t\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "745ab067-278d-4d93-8ccc-3801888c3d6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = range(5)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5a0528e8-57c5-4494-bd0f-9b2d723d03ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#help(range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "499a8848-84b1-4a44-a0ed-b5d2c30ca75b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bd5b6e5b-cb07-473e-acc0-b183d3c6ede6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function print in module builtins:\n",
+      "\n",
+      "print(*args, sep=' ', end='\\n', file=None, flush=False)\n",
+      "    Prints the values to a stream, or to sys.stdout by default.\n",
+      "\n",
+      "    sep\n",
+      "      string inserted between values, default a space.\n",
+      "    end\n",
+      "      string appended after the last value, default a newline.\n",
+      "    file\n",
+      "      a file-like object (stream); defaults to the current sys.stdout.\n",
+      "    flush\n",
+      "      whether to forcibly flush the stream.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "56bfaf4a-f9fb-4f4c-afdb-1277c40ebf7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\t ---- u\t ---- g\t ---- u\t ---- r\t ---- t\t ---- h\t ---- a\t ---- "
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Jugurtha'\n",
+    "for i in name:\n",
+    "    print (i, end='\\t ---- ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ca0f431b-3886-41d1-acbe-1371c9d9e25d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "d3dfc68f-59e6-40b4-ae0a-a0d1efea28fb",
    "metadata": {},
    "outputs": [
@@ -68,23 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "560737cb-5144-4756-943d-4aadd4fc00ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i=0, j=0\n",
-      "i=0, j=1\n",
-      "i=0, j=2\n",
-      "i=1, j=0\n",
-      "i=1, j=1\n",
-      "i=1, j=2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NESTED - FOR - FOR\n",
     "for i in range(2):        # Outer loop\n",
@@ -94,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "c24c8c24-2780-4991-9fa7-64951df39cc8",
    "metadata": {},
    "outputs": [
@@ -105,15 +251,19 @@
       "0\n",
       "1\n",
       "2\n",
-      "3\n"
+      "3\n",
+      "4\n",
+      "5\n",
+      "Exiting at 5\n"
      ]
     }
    ],
    "source": [
     "# LOOP with condition : FOR - ELSE\n",
-    "for n in range(5):\n",
+    "for n in range(10):\n",
     "    print(n)\n",
-    "    if n == 3:\n",
+    "    if n == 5:\n",
+    "        print('Exiting at 5')\n",
     "        break\n",
     "else:\n",
     "    print(\"Loop finished without break\")"
@@ -121,19 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "eda920c1-5849-4212-a7f5-c471dec6dd91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 3 4]\n",
-      "[ 0  1  4  9 16]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# VECTORISED / IMPLICIT LOOPS\n",
     "import numpy as np\n",
@@ -144,18 +285,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "d8135b6d-f3c1-4209-b9c9-8c05f5e2c057",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 4, 9, 16]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# COMPREHENSION LOOPS\n",
     "squares = [x**2 for x in range(5)]\n",
@@ -173,20 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eb9f06f8-4166-4963-8df6-c0ff30408f5b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5 0.65 0.9 1.0 \n",
-      "\n",
-      "New List of Normalised Scores  [0.5, 0.65, 0.8, 0.9, 1.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores = [50, 65, 80, 90, 100]\n",
     "scaled_scores = []\n",
@@ -210,67 +333,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "71c2a859-10b1-48b8-9f9c-2c55e49329e5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Product</th>\n",
-       "      <th>Sales</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>B</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Product  Sales\n",
-       "0       A    100\n",
-       "1       B    200\n",
-       "2       C    300"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -282,20 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "70febeef-169c-40ff-8580-59f73739eacc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Product A has sales 100\n",
-      "Product B has sales 200\n",
-      "Product C has sales 300\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for index, row in df.iterrows():\n",
     "    print(f\"Product {row['Product']} has sales {row['Sales']}\")"
@@ -323,88 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1e36d19d-53d4-406e-aa5c-13ae2b342f23",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27.5"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.Age.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "41ea9df8-5b88-4b46-9094-48808c0fe319",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>27.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name   Age\n",
-       "0    Alice  25.0\n",
-       "1      Bob  27.5\n",
-       "2  Charlie  30.0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(len(df)):\n",
     "    if pd.isnull(df.loc[i, 'Age']):\n",
@@ -423,67 +411,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a005f8d2-ee3c-4dbf-8ed2-67add6089032",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Income</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>3000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>25</td>\n",
-       "      <td>4000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30</td>\n",
-       "      <td>5000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Age  Income\n",
-       "0   20    3000\n",
-       "1   25    4000\n",
-       "2   30    5000"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "features = ['Age', 'Income']  #cols - add new columns : col_squared and square each col value\n",
@@ -494,75 +425,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "aff7c275-0ad4-4639-8315-b823c4b99ae4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Income</th>\n",
-       "      <th>Age_squared</th>\n",
-       "      <th>Income_squared</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>400</td>\n",
-       "      <td>9000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>25</td>\n",
-       "      <td>4000</td>\n",
-       "      <td>625</td>\n",
-       "      <td>16000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>900</td>\n",
-       "      <td>25000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Age  Income  Age_squared  Income_squared\n",
-       "0   20    3000          400         9000000\n",
-       "1   25    4000          625        16000000\n",
-       "2   30    5000          900        25000000"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in features:\n",
     "    df[col + \"_squared\"] = df[col] ** 2\n",
@@ -579,19 +445,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "ac29e1e8-2c78-49c4-9442-c8d5d1300131",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[100, 250, 300, 120, 80]\n",
-      "Number of high sales: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales = [100, 250, 300, 120, 80]\n",
     "count = 0\n",
