--- a/assign/studentQueries.ipynb
+++ b/assign/studentQueries.ipynb
@@ -33,6 +33,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "884f6b3f-d691-4214-9bed-e18172608a95",
+   "metadata": {},
+   "source": [
+    "# Groups\n",
+    "- Bijata - Mandal\n",
+    "- Suroor - Nayeema\n",
+    "- Muhammad - Jugurtha\n",
+    "- Huma - Rida\n",
+    "- Sultana - DJ\n",
+    "- Ratiba - Sharmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57f57cc6-78f0-4270-8108-3aefa55f86d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "119866c4-bedf-4fe0-abb5-82f2d75bae49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c301387-8e25-4ca4-94b2-15793b2b532f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3740645-cb11-45bd-ba22-654bf9ae4d47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee73b426-9c2c-41d8-b71e-f2a5a05c1e31",
+   "metadata": {},
+   "source": [
+    "# Activities\n",
+    "- CV/ Resume (~ 2 page)\n",
+    "- Git Hub Repositories\n",
+    "- Self Intro - Recording (Youtube)  ~ < 5 min (Pair)\n",
+    "- Interview 50 Qs (Prepare & Submit)\n",
+    "- Mock Intervew - Recording (Youtube) ~ 10 - 15 min (Pair)\n",
+    "- Zoom (Recording)/ Class  ~ 45 min free\n",
+    "- Submit on Sat / Sun Classes \n",
+    "- After PIIT review with Quiz and Guide you\n",
+    "- Feedback, Questions "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a638dcb4-f741-43cd-b8f3-3a545da3def2",
    "metadata": {},
    "source": [
